infra/k8s/ti.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ti
  namespace: zorbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ti
  template:
    metadata:
      labels:
        app: ti
    spec:
      containers:
        - name: ti
          image: zorbox/ti:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8070
---
apiVersion: v1
kind: Service
metadata:
  name: ti
  namespace: zorbox
spec:
  selector:
    app: ti
  ports:
    - name: http
      port: 8070
      targetPort: 8070
